# mcpauth

./: .gitignore  AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
demos/01-basic/: SCENARIO.md  tokens.json
docs/: ARCHITECTURE.md
examples/: demo.txt  help.txt  list.txt  version.txt
mcpauth/: __init__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_hardening.py  test_smoke.py
