[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-mcpauth"
version = "0.1.1"
description = "Drop-in token-auth gateway in front of unauthenticated MCP servers"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai-security", "mcp", "cognis-digital", "cognis-neural-suite", "security", "auth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/mcpauth"

[project.scripts]
"mcpauth-emit" = "mcpauth.connect:emit_main"
mcpauth = "mcpauth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcpauth"]

[tool.hatch.metadata]
allow-direct-references = true
